k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /api/service-a
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80
      - path: /api/service-b
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80
      - path: /api/service-c
        pathType: Prefix
        backend:
          service:
            name: service-c
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
